--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@ $(function(){
 
 	var targetMonth = "";
 	var todayDate = new Date();
-	var changeDate = new Date(2018, 11-1, 1);
+	var changeDate = new Date(2018, 12-1, 1);
 
 	if( todayDate.getTime() > changeDate.getTime() ){
 		$("#this_month").hide();
@@ -117,248 +117,8 @@ $(function(){
 
 </div>
 
-<!----------------------------10/1 start---------------------------->
-<div id="this_month">
-
-<p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
-	中には他ではお目にかかれない変わりダネも有り! 新宿二丁目ならではの空気感と共にぜひご堪能あれ♪
-</p>
-
-<h2 id="alamas">ALAMAS CAFE</h2>
-<div id="pay_icon">
-<i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
-<i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
-</div>
-	<div id="alamas_bg"><p class="alamas_intro">仲通りに面するオープンカフェ＆バー。DJブースを設置しており、毎日なにかしらプログラムをご用意しています。週末にはUstream配信も！<br />お酒だけでなく、フードメニューも充実。小腹が空いたらふらりと立ち寄れます。</p>
-	</div>
-
-<div id="menu-2">
-	<img src="image/foodmenu/alamas-18octorber.jpg" width="400px" /><br />
-		<p><span class="food-font">秋鮭とキノコの乱交丼<br />
-			&yen;700</span><br />
-			脂ののった旬の秋鮭と旨味たっぷりのキノコをたくさん使った秋を楽しめるボウルです。チョット甘めの醤油だれと焦がしバターのこってり風味をレモンでキュッと引き締めて、ごはんのすすむ味付けに仕上げました。
-		</p>
-</div>
-
-<div id="menu-2">
-	<img src="image/foodmenu/alamas-18octorber_2.jpg" width="400px" /><br />
-		<p><span class="food-font">秋の入口ぶどうティー<br />
-			&yen;800</span><br />
-			紅茶リキュールのジョシィーをぶどうジュースと一緒に召し上がれ～。紅茶とぶどうの香りで秋の入口を感じる1杯です。秋の夜長、アラマスカフェでゆったりお過ごし下さい。
-		</p>
-</div>
-
-<div class="clear"></div>
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-01.jpg" /><br />
-		<p><span class="food-font">トムヤムラーメン <br />
-			&yen;500</span><br />
-			酸っぱ辛いタイラーメン。</p>
-</div>
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-02.jpg" /><br />
-		<p><span class="food-font">グリーンカレー<br />
-			&yen;600</span><br />
-			辛ウマ!!病みつき!!本格派!!鶏肉、タケノコ、具だくだんの辛〜いカレー。</p>
-</div>
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-03.jpg" /><br />
-		<p><span class="food-font">ニコニコALAMASカレー<br />
-			&yen;600</span><br />
-			じっくり煮込んだカフェの定番カレー。季節の野菜をトッピング。</p>
-</div>
-
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-08.jpg" /><br />
-		<p><span class="food-font">やみつき唐揚げ<br />
-			&yen;500</span><br />
-			秘密のスパイスに漬け込みました。ウマ過ぎて１皿じゃ足りないかも!?</p>
-</div>
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-05.jpg" /><br />
-		<p><span class="food-font">自家製　季節のピクルス<br />
-			&yen;500</span><br />
-			季節の野菜をたっぷり漬け込みました。ALAMAS自慢の品です。</p>
-</div>
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-07.jpg" /><br />
-		<p><span class="food-font">フライドポテト<br />
-			&yen;400</span><br />
-			スウィートチリマヨネーズ＆ケチャップで召し上がれ。</p>
-</div>
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-09.jpg" /><br />
-		<p><span class="food-font">モヒート<br />
-			&yen;800</span><br />
-			ミントの爽やかな香りのシロップとライムの甘酸っぱい風味が奏でるすっきりテイストな南国カクテルの定番。 </p>
-</div>
-
-<div id="menu-3">
-	<img src="image/foodmenu/menu-13.jpg" /><br />
-		<p><span class="food-font">焼きたてワッフル バニラジェラート添え<br />
-			&yen;500</span><br />
-			外はさっくり中はもっちりのアメリカンタイ プ。バニラジェラードがたっぷり盛られ、５ 種類のソースをトッピングで選んで頂けます。</p>
-</div>
-
-<div id="menu-4">
-	<p><span class="food-font">エビせん&nbsp;&nbsp;&yen;300</span><br />
-		タイ風エビせん。お酒のおつまみにもチョット口寂しい時にもピッタリです。</p>
-</div>
-
-<div id="menu-4">
-	<p><span class="food-font">ソフトドリンク SOFT DRINK&nbsp;&nbsp;各種&yen;400～</span><br />
-		（コーヒー / ティー / ジュース / スムージー 他)</p>
-</div>
-
-<div class="clear"></div>
-
-<div id="menu-5">
-	<p><span class="food-font">焼酎&nbsp;SHOCHU&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
-</div>
-
-	<div id="menu-5">
-	<p><span class="food-font">ウィスキー&nbsp;WHISKY&nbsp;&nbsp;各種&nbsp;&yen;700</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">カクテル&nbsp;COCKTAIL&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">ショット&nbsp;SHOT&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">グラスワイン&nbsp;GLASS WINE&nbsp;&nbsp;各種&nbsp;&yen;600</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">ボトルワイン&nbsp;BOTTLE WINE&nbsp;&nbsp;各種&nbsp;&yen;3,000</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">シャンパン&nbsp;CHAMPAGNE&nbsp;&nbsp;各種&nbsp;&yen;6,000～</span></p>
-</div>
-
-<div class="clear"></div>
-
-&nbsp;
-
-<h2 id="aiso">AiSOTOPE LOUNGE</h2>
-<div id="pay_icon">
-<i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
-</div>
-	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
-
-<div id="menu-2">
-	<img src="image/foodmenu/aiso_mainmenu-18octorber.jpg" width="400px" /><br />
-		<p><span class="food-font">MAIN BAR一押し<br />
-			『SWEET＆STRONG』&nbsp;&yen;900</span><br />
-			とろ～っとした甘さとグッとくるお酒。その理由は、クリームとコーヒーリキュールにウォッカをプラスし、その名の通り【甘くて強い】カクテルに仕上げました!!
-		</p>
-</div>
-
-<div id="menu-2">
-	<img src="image/foodmenu/aiso_submenu-18octorber.jpg" width="400px" /><br />
-		<p><span class="food-font">LOUNGE BAR一押し<br />
-						『紫雨』&nbsp;&yen;900</span><br />
-			巨峰をベースにジンとアマレットをレモンで飲みやすいカクテルに仕上げました!! サッパリとした味わいと共にムラサキの色合いもお楽しみください♥
-		</p>
-</div>
-<div class="clear"></div>
-
-<div id="menu-5">
-	<p><span class="food-font">ビール&nbsp;BEER&nbsp;&nbsp;各種&nbsp;&yen;700～</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">焼酎&nbsp;SHOCHU&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">ウィスキー&nbsp;WHISKY&nbsp;&nbsp;各種&nbsp;&yen;700～</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">カクテル&nbsp;COCKTAIL&nbsp;&nbsp;各種&nbsp;&yen;600～</span><br />
-	※アルコール　濃いめ+￥100　ダブル+￥300　でオーダー承ります。</p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">ショット&nbsp;SHOT&nbsp;&nbsp;各種&nbsp;&yen;500～</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">ソフトドリンク&nbsp;SOFT DRINK&nbsp;&nbsp;各種&nbsp;&yen;500～</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">グラスワイン&nbsp;GLASS WINE&nbsp;&nbsp;各種&nbsp;&yen;600</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">ボトルワイン&nbsp;BOTTLE WINE&nbsp;&nbsp;各種&nbsp;&yen;7,000</span></p>
-</div>
-
-
-<div id="menu-4">
-	<p><span class="food-font">シャンパン CHAMPAGNE　各種&nbsp;&yen;13,000～</span></p>
-</div>
-
-<div class="clear"></div>
-
-	<p>※イベントにより価格が変動する場合があります。</p>
-
-&nbsp;
-
-<h2 id="aiiro">AiiRO CAFE</h2>
-<div id="pay_icon">
-<i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
-<i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
-</div>
-<p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
-
-<div id="menu-6">
-	<img src="image/foodmenu/aiiro-18octorber.jpg" width="400px" /><br />
-		<p><span class="food-font">『Chocolate de Orange』&nbsp;&yen;800</span><br />
-			10月はみんな大好き(?) オレンジを使用したカクテルです! ラム酒を使い飲みやすく仕上げました。オレンジと相性バッチリのチョコレートを添え、飲みやすいのにしっかり酔える♥ それがショコラ・デ・オランジュです★
-					</p>
-</div>
-
-<div class="clear"></div>
-
-<div id="menu-5">
-	<p><span class="food-font">SOFT DRINK&nbsp;各種&yen;500</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">BEER&nbsp;&yen;700</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">COCKTAIL&nbsp;各種&yen;700</span></p>
-</div>
-
-<div id="menu-5">
-	<p><span class="food-font">SHOCHU&nbsp;各種&yen;600</span></p>
-</div>
-
-<div class="clear"></div>
-
-&nbsp;
-
-</div><!--this_month-->
-
-
 <!----------------------------11/1 start---------------------------->
-<div id="next_month">
+<div id="this_month">
 
 <p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
 	中には他ではお目にかかれない変わりダネも有り! 新宿二丁目ならではの空気感と共にぜひご堪能あれ♪
@@ -570,6 +330,246 @@ $(function(){
 	<img src="image/foodmenu/aiiro-18november.jpg" width="400px" /><br />
 		<p><span class="food-font">『sweet milkchocolate』&nbsp;&yen;800</span><br />
 			甘～いお酒が飲みたくなる、肌寒い季節にはこれ!! カルーアとウィスキーの「シーバスリガール ミズナラ」を使ったアルコール度数高めのミルキーカクテルです★ これからの寒さはウィスキーで身体を温めましょ～♡
+					</p>
+</div>
+
+<div class="clear"></div>
+
+<div id="menu-5">
+	<p><span class="food-font">SOFT DRINK&nbsp;各種&yen;500</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">BEER&nbsp;&yen;700</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">COCKTAIL&nbsp;各種&yen;700</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">SHOCHU&nbsp;各種&yen;600</span></p>
+</div>
+
+<div class="clear"></div>
+
+&nbsp;
+
+</div><!--this_month-->
+
+
+<!----------------------------12/1 start---------------------------->
+<div id="next_month">
+
+<p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
+	中には他ではお目にかかれない変わりダネも有り! 新宿二丁目ならではの空気感と共にぜひご堪能あれ♪
+</p>
+
+<h2 id="alamas">ALAMAS CAFE</h2>
+<div id="pay_icon">
+<i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
+<i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
+</div>
+	<div id="alamas_bg"><p class="alamas_intro">仲通りに面するオープンカフェ＆バー。DJブースを設置しており、毎日なにかしらプログラムをご用意しています。週末にはUstream配信も！<br />お酒だけでなく、フードメニューも充実。小腹が空いたらふらりと立ち寄れます。</p>
+	</div>
+
+<div id="menu-2">
+	<img src="image/foodmenu/alamas-18december.jpg" width="400px" /><br />
+		<p><span class="food-font">おっ♡鳥 すきらーめん鍋<br />
+			&yen;800</span><br />
+			甘さ控えめな割り下にラーメンを入れて煮込んだ鳥すき鍋。肉も野菜もたっぷり食べられる一品! 別添えのスパイシーなおろし生姜を入れてカレー風味に味を変えたり、生玉子やチーズ(各+¥100)でアレンジを楽しんでもOK‼︎
+		</p>
+</div>
+
+<div id="menu-2">
+	<img src="image/foodmenu/alamas-18december_2.jpg" width="400px" /><br />
+		<p><span class="food-font">あったか♡ホットモヒート<br />
+			&yen;900</span><br />
+			アラマスカフェお薦めのモヒート。寒い季節でもモヒートを美味しく飲んで欲しいと思い作りました。アクセントのピンクペッパーで香りアップ。いつもとは一味違ったモヒートをお召し上がり下さい。
+		</p>
+</div>
+
+<div class="clear"></div>
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-01.jpg" /><br />
+		<p><span class="food-font">トムヤムラーメン <br />
+			&yen;500</span><br />
+			酸っぱ辛いタイラーメン。</p>
+</div>
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-02.jpg" /><br />
+		<p><span class="food-font">グリーンカレー<br />
+			&yen;600</span><br />
+			辛ウマ!!病みつき!!本格派!!鶏肉、タケノコ、具だくだんの辛〜いカレー。</p>
+</div>
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-03.jpg" /><br />
+		<p><span class="food-font">ニコニコALAMASカレー<br />
+			&yen;600</span><br />
+			じっくり煮込んだカフェの定番カレー。季節の野菜をトッピング。</p>
+</div>
+
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-08.jpg" /><br />
+		<p><span class="food-font">やみつき唐揚げ<br />
+			&yen;500</span><br />
+			秘密のスパイスに漬け込みました。ウマ過ぎて１皿じゃ足りないかも!?</p>
+</div>
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-05.jpg" /><br />
+		<p><span class="food-font">自家製　季節のピクルス<br />
+			&yen;500</span><br />
+			季節の野菜をたっぷり漬け込みました。ALAMAS自慢の品です。</p>
+</div>
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-07.jpg" /><br />
+		<p><span class="food-font">フライドポテト<br />
+			&yen;400</span><br />
+			スウィートチリマヨネーズ＆ケチャップで召し上がれ。</p>
+</div>
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-09.jpg" /><br />
+		<p><span class="food-font">モヒート<br />
+			&yen;800</span><br />
+			ミントの爽やかな香りのシロップとライムの甘酸っぱい風味が奏でるすっきりテイストな南国カクテルの定番。 </p>
+</div>
+
+<div id="menu-3">
+	<img src="image/foodmenu/menu-13.jpg" /><br />
+		<p><span class="food-font">焼きたてワッフル バニラジェラート添え<br />
+			&yen;500</span><br />
+			外はさっくり中はもっちりのアメリカンタイ プ。バニラジェラードがたっぷり盛られ、５ 種類のソースをトッピングで選んで頂けます。</p>
+</div>
+
+<div id="menu-4">
+	<p><span class="food-font">エビせん&nbsp;&nbsp;&yen;300</span><br />
+		タイ風エビせん。お酒のおつまみにもチョット口寂しい時にもピッタリです。</p>
+</div>
+
+<div id="menu-4">
+	<p><span class="food-font">ソフトドリンク SOFT DRINK&nbsp;&nbsp;各種&yen;400～</span><br />
+		（コーヒー / ティー / ジュース / スムージー 他)</p>
+</div>
+
+<div class="clear"></div>
+
+<div id="menu-5">
+	<p><span class="food-font">焼酎&nbsp;SHOCHU&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
+</div>
+
+	<div id="menu-5">
+	<p><span class="food-font">ウィスキー&nbsp;WHISKY&nbsp;&nbsp;各種&nbsp;&yen;700</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">カクテル&nbsp;COCKTAIL&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">ショット&nbsp;SHOT&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">グラスワイン&nbsp;GLASS WINE&nbsp;&nbsp;各種&nbsp;&yen;600</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">ボトルワイン&nbsp;BOTTLE WINE&nbsp;&nbsp;各種&nbsp;&yen;3,000</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">シャンパン&nbsp;CHAMPAGNE&nbsp;&nbsp;各種&nbsp;&yen;6,000～</span></p>
+</div>
+
+<div class="clear"></div>
+
+&nbsp;
+
+<h2 id="aiso">AiSOTOPE LOUNGE</h2>
+<div id="pay_icon">
+<i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
+</div>
+	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
+
+<div id="menu-2">
+	<img src="image/foodmenu/aiso_mainmenu-18december.jpg" width="400px" /><br />
+		<p><span class="food-font">MAIN BAR一押し<br />
+			『silent night』&nbsp;&yen;900</span><br />
+			ピーチリキュールとクランベリーで甘酸っぱい冬の恋を演出。クリーミーに仕立てた淡いピンク色はあなたの元にやってくるサンタのように優しい味わい。Silent night, Holy night…
+		</p>
+</div>
+
+<div id="menu-2">
+	<img src="image/foodmenu/aiso_submenu-18december.jpg" width="400px" /><br />
+		<p><span class="food-font">LOUNGE BAR一押し<br />
+						『深夜のtea time』&nbsp;&yen;700</span><br />
+			甘く芳醇な香りのアマレットを使ったホットカクテルを飲んで心も身体もぽかぽかに。寒い冬… 大人の女子会してみませんか?
+		</p>
+</div>
+<div class="clear"></div>
+
+<div id="menu-5">
+	<p><span class="food-font">ビール&nbsp;BEER&nbsp;&nbsp;各種&nbsp;&yen;700～</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">焼酎&nbsp;SHOCHU&nbsp;&nbsp;各種&nbsp;&yen;600～</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">ウィスキー&nbsp;WHISKY&nbsp;&nbsp;各種&nbsp;&yen;700～</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">カクテル&nbsp;COCKTAIL&nbsp;&nbsp;各種&nbsp;&yen;600～</span><br />
+	※アルコール　濃いめ+￥100　ダブル+￥300　でオーダー承ります。</p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">ショット&nbsp;SHOT&nbsp;&nbsp;各種&nbsp;&yen;500～</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">ソフトドリンク&nbsp;SOFT DRINK&nbsp;&nbsp;各種&nbsp;&yen;500～</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">グラスワイン&nbsp;GLASS WINE&nbsp;&nbsp;各種&nbsp;&yen;600</span></p>
+</div>
+
+<div id="menu-5">
+	<p><span class="food-font">ボトルワイン&nbsp;BOTTLE WINE&nbsp;&nbsp;各種&nbsp;&yen;7,000</span></p>
+</div>
+
+
+<div id="menu-4">
+	<p><span class="food-font">シャンパン CHAMPAGNE　各種&nbsp;&yen;13,000～</span></p>
+</div>
+
+<div class="clear"></div>
+
+	<p>※イベントにより価格が変動する場合があります。</p>
+
+&nbsp;
+
+<h2 id="aiiro">AiiRO CAFE</h2>
+<div id="pay_icon">
+<i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
+<i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
+</div>
+<p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
+
+<div id="menu-6">
+	<img src="image/foodmenu/aiiro-18december.jpg" width="400px" /><br />
+		<p><span class="food-font">『Blue Snow』&nbsp;&yen;900</span><br />
+			寒さがましてきた12月♥ 今月のカクテルはちょっぴりストロング。なのにとても飲みやすいクリスマスにピッタリの甘～いカクテルです★ 気になるあの子とオシャレなカクテルで乾杯してみてはいかが?
 					</p>
 </div>
 
