--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@ $(function(){
 
 	var targetMonth = "";
 	var todayDate = new Date();
-	var changeDate = new Date(2018, 12-1, 1);
+	var changeDate = new Date(2019, 2-1, 1);
 
 	if( todayDate.getTime() > changeDate.getTime() ){
 		$("#this_month").hide();
@@ -117,7 +117,7 @@ $(function(){
 
 </div>
 
-<!----------------------------11/1 start---------------------------->
+<!----------------------------1/1 start---------------------------->
 <div id="this_month">
 
 <p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
@@ -133,19 +133,18 @@ $(function(){
 	</div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-18november.jpg" width="400px" /><br />
-		<p><span class="food-font">みんな大好き懐かしのナポリタン<br />
-			&yen;700</span><br />
-			ALAMASオープンから11年目にして初めてのパスタメニューに挑戦‼︎ 記念すべき第1弾は王道のナポリタン。具材とケチャップをしっかり焼き付けて香ばしく仕上げました。目玉焼き(+¥100)や粉チーズ(+¥100)のトッピングで自分好みにアレンジしてみて。
+	<img src="image/foodmenu/alamas-19january.jpg" width="400px" /><br />
+		<p><span class="food-font">週替わり卍 エビ/プルコギ/ラザニア<br />
+			&yen;900</span><br />
+			底冷えする寒い夜にはあっつあつのグラタンで体の芯から温まりませんか? 週替わりで楽しめるように、アジアンスパイシーな【海老グラタン】コリアンホットな【プルコギグラタン】THE王道な【コク旨ラザニア】と3種類をご用意しました!
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-18november_2.jpg" width="400px" /><br />
-		<p><span class="food-font">王道! キャラメルマキアート<br />
+	<img src="image/foodmenu/alamas-19january_2.jpg" width="400px" /><br />
+		<p><span class="food-font">4種のタイティー<br />
 			&yen;600</span><br />
-			アラマスカフェのコーヒーが新しくなりました! 王道キャラメルマキアートを召し上がれ! 挽きたてエスプレッソとキャラメルの甘い香りでゆったりとしたひと時をお過ごし
-下さい。
+			昨年の夏に話題になったあまーいタイティーに4つのフレーバーがあるのをご存知でしたか? スタンダード、グリーン、ミルクグリーン、ゴールデンミックス。香り高いタイのお茶、お好みのものを見つけてみてください! 寒い季節、ホットでのご提供です♡
 		</p>
 </div>
 
@@ -259,18 +258,18 @@ $(function(){
 	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_mainmenu-18november.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_mainmenu-19january.jpg" width="400px" /><br />
 		<p><span class="food-font">MAIN BAR一押し<br />
-			『Caramel BERRY』&nbsp;&yen;800</span><br />
-			ロシア生まれのプレミアムウォッカ「ストリチナヤ」シリーズの塩キャラメル味とクランベリーをあわせた珍しいカクテルです! 強くて甘い風味をお試しあれ!!
+			『郷愁』&nbsp;&yen;800</span><br />
+			古くから和菓子に使われている日本伝統の小豆。その風味を活かしたリキュールを使ったビールカクテル。麦と小豆の芳ばしくどこか懐かしい味をご堪能あれ。
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_submenu-18november.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_submenu-19january.jpg" width="400px" /><br />
 		<p><span class="food-font">LOUNGE BAR一押し<br />
-						『林檎のしずく』&nbsp;&yen;800</span><br />
-			紅茶リキュールと林檎ジュースを炭酸で割った甘さスッキリとっても飲みやすいカクテルに仕上げました♥
+						『釜撫子』&nbsp;&yen;800</span><br />
+			明けましておめこ♥ 新年一発目は日本酒をベースにグレナデンシロップやレモンシロップで味付けした雅なオカマのアナタにピッタリなカクテルに仕上げました♥
 		</p>
 </div>
 <div class="clear"></div>
@@ -327,9 +326,9 @@ $(function(){
 <p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
 
 <div id="menu-6">
-	<img src="image/foodmenu/aiiro-18november.jpg" width="400px" /><br />
-		<p><span class="food-font">『sweet milkchocolate』&nbsp;&yen;800</span><br />
-			甘～いお酒が飲みたくなる、肌寒い季節にはこれ!! カルーアとウィスキーの「シーバスリガール ミズナラ」を使ったアルコール度数高めのミルキーカクテルです★ これからの寒さはウィスキーで身体を温めましょ～♡
+	<img src="image/foodmenu/aiiro-19january.jpg" width="400px" /><br />
+		<p><span class="food-font">『OSHOGATSU』&nbsp;&yen;900</span><br />
+			明けましておめでとうございます★ 新年一発目のカクテルはやはり外センBARに相応し日本酒!! 日本人も大好きなフレッシュみかんを使ってAiiROオリジナルに仕上げました!
 					</p>
 </div>
 
@@ -358,7 +357,7 @@ $(function(){
 </div><!--this_month-->
 
 
-<!----------------------------12/1 start---------------------------->
+<!----------------------------2/1 start---------------------------->
 <div id="next_month">
 
 <p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
@@ -374,18 +373,18 @@ $(function(){
 	</div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-18december.jpg" width="400px" /><br />
-		<p><span class="food-font">おっ♡鳥 すきらーめん鍋<br />
+	<img src="image/foodmenu/alamas-19february.jpg" width="400px" /><br />
+		<p><span class="food-font">豚豚豚<br />
 			&yen;800</span><br />
-			甘さ控えめな割り下にラーメンを入れて煮込んだ鳥すき鍋。肉も野菜もたっぷり食べられる一品! 別添えのスパイシーなおろし生姜を入れてカレー風味に味を変えたり、生玉子やチーズ(各+¥100)でアレンジを楽しんでもOK‼︎
+			柔らかく旨味の強い豚肩ロースをご飯に合う甘辛いソースでソテーしました。オレンジと蜂蜜に醤油を合わせて、爽やかだけどコク深い味わいになってリピート必至な逸品です!!
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-18december_2.jpg" width="400px" /><br />
-		<p><span class="food-font">あったか♡ホットモヒート<br />
-			&yen;900</span><br />
-			アラマスカフェお薦めのモヒート。寒い季節でもモヒートを美味しく飲んで欲しいと思い作りました。アクセントのピンクペッパーで香りアップ。いつもとは一味違ったモヒートをお召し上がり下さい。
+	<img src="image/foodmenu/alamas-19february_2.jpg" width="400px" /><br />
+		<p><span class="food-font">ジャパニーズレモネード<br />
+			&yen;800</span><br />
+			ワインとレモネードはアメリカンレモネード。柚子を入れたらあら不思議!! 一気に和のテイストに! 是非お試しあれ!
 		</p>
 </div>
 
@@ -499,18 +498,18 @@ $(function(){
 	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_mainmenu-18december.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_mainmenu-19february.jpg" width="400px" /><br />
 		<p><span class="food-font">MAIN BAR一押し<br />
-			『silent night』&nbsp;&yen;900</span><br />
-			ピーチリキュールとクランベリーで甘酸っぱい冬の恋を演出。クリーミーに仕立てた淡いピンク色はあなたの元にやってくるサンタのように優しい味わい。Silent night, Holy night…
+			『チョコカルミル』&nbsp;&yen;1000</span><br />
+			チョコレートリキュールとカルピスをミルクで仕上げたカクテルにストロベリーリキュールも加え、甘酸っぱくてクリーミーなカクテルを召し上がれ!!
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_submenu-18december.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_submenu-19february.jpg" width="400px" /><br />
 		<p><span class="food-font">LOUNGE BAR一押し<br />
-						『深夜のtea time』&nbsp;&yen;700</span><br />
-			甘く芳醇な香りのアマレットを使ったホットカクテルを飲んで心も身体もぽかぽかに。寒い冬… 大人の女子会してみませんか?
+						『BIG BOMB』&nbsp;&yen;1000</span><br />
+			日本初! AGWAのビッグボムグラスが登場!! 中身は甘くてサッパリ美味しいカクテル!『@agwa_japan 』を添えてインスタ映え～!
 		</p>
 </div>
 <div class="clear"></div>
@@ -567,9 +566,9 @@ $(function(){
 <p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
 
 <div id="menu-6">
-	<img src="image/foodmenu/aiiro-18december.jpg" width="400px" /><br />
-		<p><span class="food-font">『Blue Snow』&nbsp;&yen;900</span><br />
-			寒さがましてきた12月♥ 今月のカクテルはちょっぴりストロング。なのにとても飲みやすいクリスマスにピッタリの甘～いカクテルです★ 気になるあの子とオシャレなカクテルで乾杯してみてはいかが?
+	<img src="image/foodmenu/aiiro-19february.jpg" width="400px" /><br />
+		<p><span class="food-font">『Strawberry by BOTTEGA』&nbsp;&yen;900</span><br />
+			イタリアのシリアルナンバー入りボトルのドライジンが入荷です!  フレッシュなストロベリーを使いボッテガジンにふさわしい味に仕上げました。甘～い夜ばかりじゃ退屈! たまにはスパイシーな夜もね♥
 					</p>
 </div>
 
