--- a/rental.html
+++ b/rental.html
@@ -38,7 +38,7 @@
 <body class="mainbody">
 <div id="big-container">
 	<div class="lead-txt"><p>新宿2丁目の遊び場！クラブ、Bar、カフェなど系列店舗合同ウェブサイト | <a href="https://translate.google.com/translate?hl=en&sl=ja&tl=en&u=https://aliving.net">ENGLISH</a></p></div>
-	<div class="sns_icon"><a href="https://twitter.com/anniv_aliving" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a><a href="https://www.facebook.com/events/448058282221744/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a><a href="https://www.instagram.com/a_living_/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+	<div class="sns_icon"><a href="https://twitter.com/anniv_aliving" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a><a href="https://www.facebook.com/events/448058282221744/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a><a href="https://www.instagram.com/aisotope_lounge/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
 
 <div id="header"></div>
 
@@ -167,7 +167,7 @@ mail　<a href="mailto:51low@aliving.net">51low@aliving.net</a><br />
 <h2>ブッキングに関するお問い合わせ</h2>
 <p>
 株式会社カペラシスティーナ （AiSOTOPE LOUNGE / ALAMAS CAFE / AiiRO CAFE）<br />
-〒160-0022 東京都新宿区新宿2-10-6 SETOビル3階<br />
+〒160-0022 東京都新宿区新宿2-7-3 ヴェラハイツ新宿御苑303号室<br />
 TEL＆FAX:03-6457-4242<br />
 
 <br />
