--- a/access_.html
+++ b/access_.html
@@ -121,6 +121,25 @@
 	Shinjuku Shinjuku-Ku Tokyo JAPAN<br />
 	TEL:(81)3-6273-0740<br />
 
+
+	<h2>AVANTGARDE TOKYO</h2>
+	<div id="sc"><a href="https://www.facebook.com/AiiROCAFE" target="_blank"><img src="image/foot_icon1.gif"></a><a href="https://twitter.com/avantgardetokyo" target="_blank"><img src="image/foot_icon2.gif"></a></div>
+	[Opening Hours]br />
+	WED-SUN 20:00 - 5:00<br />
+	<br /> 
+	[CLOSE]<br /> 
+	MON＆THU / ALL TIME<br />
+	<br />
+	〒160-0022<br />
+	東京都新宿区新宿2-10-3 高橋ビル2F<br />
+	TEL:03-6380-0024<br />
+	<br />
+	zip160-0022<br />
+	TAKAHASHI BLD 2F, 2-10-3<br />
+	Shinjuku Shinjuku-Ku Tokyo JAPAN <br />
+	TEL:(81)3-6380-0024<br />
+
+
 	<h1>[系列店]</h1>
 	<h2>Bar and</h2>
 	<div id="sc"><a href="https://www.facebook.com/pages/and/275836772518136?ref=profile" target="_blank"><img src="image/foot_icon1.gif"></a><a href="https://twitter.com/2bar_and" target="_blank"><img src="image/foot_icon2.gif"></a></div>
