--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@ $(function(){
 
 	var targetMonth = "";
 	var todayDate = new Date();
-	var changeDate = new Date(2019, 2-1, 1);
+	var changeDate = new Date(2019, 5-1, 1);
 
 	if( todayDate.getTime() > changeDate.getTime() ){
 		$("#this_month").hide();
@@ -117,14 +117,14 @@ $(function(){
 
 </div>
 
-<!----------------------------1/1 start---------------------------->
+<!----------------------------4/1 start---------------------------->
 <div id="this_month">
 
 <p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
 	中には他ではお目にかかれない変わりダネも有り! 新宿二丁目ならではの空気感と共にぜひご堪能あれ♪
 </p>
 
-<h2 id="alamas">ALAMAS CAFE</h2>
+<h2 id="alamas" name="alamas">ALAMAS CAFE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 <i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
@@ -133,18 +133,18 @@ $(function(){
 	</div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19january.jpg" width="400px" /><br />
-		<p><span class="food-font">週替わり卍 エビ/プルコギ/ラザニア<br />
-			&yen;900</span><br />
-			底冷えする寒い夜にはあっつあつのグラタンで体の芯から温まりませんか? 週替わりで楽しめるように、アジアンスパイシーな【海老グラタン】コリアンホットな【プルコギグラタン】THE王道な【コク旨ラザニア】と3種類をご用意しました!
+	<img src="image/foodmenu/alamas-19april.jpg" width="400px" /><br />
+		<p><span class="food-font">春のアラマス パン祭り♪<br />
+			&yen;650〜</span><br />
+			色々な具材とナマスがポイントの、ベトナムサンドイッチ「バインミー」。自家製チャーシュー、鶏ハム+ふんわり玉子、週代わりの三種類が楽しめちゃう! 気軽にテイクアウトもオススメ!!
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19january_2.jpg" width="400px" /><br />
-		<p><span class="food-font">4種のタイティー<br />
+	<img src="image/foodmenu/alamas-19april_2.jpg" width="400px" /><br />
+		<p><span class="food-font">ベトナムコーヒー<br />
 			&yen;600</span><br />
-			昨年の夏に話題になったあまーいタイティーに4つのフレーバーがあるのをご存知でしたか? スタンダード、グリーン、ミルクグリーン、ゴールデンミックス。香り高いタイのお茶、お好みのものを見つけてみてください! 寒い季節、ホットでのご提供です♡
+			今月のアラマスボールはバインミー。コンデンスミルクが入ったベトナムコーヒーと相性抜群! 是非バインミーと共にお楽しみください。
 		</p>
 </div>
 
@@ -258,18 +258,18 @@ $(function(){
 	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_mainmenu-19january.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_mainmenu-19april.jpg" width="400px" /><br />
 		<p><span class="food-font">MAIN BAR一押し<br />
-			『郷愁』&nbsp;&yen;800</span><br />
-			古くから和菓子に使われている日本伝統の小豆。その風味を活かしたリキュールを使ったビールカクテル。麦と小豆の芳ばしくどこか懐かしい味をご堪能あれ。
+			『#平成最後のカクテル』&nbsp;&yen;900</span><br />
+			出会いと別れの季節の春… 平成最後のカクテルができました! メロンとグレープフルーツを使用した爽やかな味わいはまるで、新緑の中で深呼吸をしているようなすっきりとした味わい♡
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_submenu-19january.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_submenu-19april.jpg" width="400px" /><br />
 		<p><span class="food-font">LOUNGE BAR一押し<br />
-						『釜撫子』&nbsp;&yen;800</span><br />
-			明けましておめこ♥ 新年一発目は日本酒をベースにグレナデンシロップやレモンシロップで味付けした雅なオカマのアナタにピッタリなカクテルに仕上げました♥
+						『ピーチスカッシュ』&nbsp;&yen;600</span><br />
+			甘いピーチシロップに清涼感たっぷりのミントシロップをソーダで割った爽やかなノンアルコールカクテルです!! アクセントのミントの葉を噛めば息リフレーッシュ★
 		</p>
 </div>
 <div class="clear"></div>
@@ -326,9 +326,9 @@ $(function(){
 <p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
 
 <div id="menu-6">
-	<img src="image/foodmenu/aiiro-19january.jpg" width="400px" /><br />
-		<p><span class="food-font">『OSHOGATSU』&nbsp;&yen;900</span><br />
-			明けましておめでとうございます★ 新年一発目のカクテルはやはり外センBARに相応し日本酒!! 日本人も大好きなフレッシュみかんを使ってAiiROオリジナルに仕上げました!
+	<img src="image/foodmenu/aiiro-19april.jpg" width="400px" /><br />
+		<p><span class="food-font">『Mary The Celery』&nbsp;&yen;1000</span><br />
+			牡蠣のエキスがたっぷり入ったトマトジュースを使い、コクのあるブラッディメアリーにしあげました☆ セロリを大胆に使い、味も見ためも映えちゃう系カクテル♡
 					</p>
 </div>
 
@@ -357,14 +357,14 @@ $(function(){
 </div><!--this_month-->
 
 
-<!----------------------------2/1 start---------------------------->
+<!----------------------------5/1 start---------------------------->
 <div id="next_month">
 
 <p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
 	中には他ではお目にかかれない変わりダネも有り! 新宿二丁目ならではの空気感と共にぜひご堪能あれ♪
 </p>
 
-<h2 id="alamas">ALAMAS CAFE</h2>
+<h2 id="alamas" name="alamas">ALAMAS CAFE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 <i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
@@ -373,18 +373,18 @@ $(function(){
 	</div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19february.jpg" width="400px" /><br />
-		<p><span class="food-font">豚豚豚<br />
-			&yen;800</span><br />
-			柔らかく旨味の強い豚肩ロースをご飯に合う甘辛いソースでソテーしました。オレンジと蜂蜜に醤油を合わせて、爽やかだけどコク深い味わいになってリピート必至な逸品です!!
+	<img src="image/foodmenu/alamas-19may.jpg" width="400px" /><br />
+		<p><span class="food-font">インスタコライス<br />
+			&yen;900〜</span><br />
+			カフェ飯で定番のタコライスをインスタ映えを狙った盛り付けにしてみました。食べ応えのある粗挽き肉のピリ辛ミートソースと焼いたフルーツの甘さがベストマッチ。最後にチーズソースをたっぷりかければ…ほら、インスタしたくなったでしょ?
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19february_2.jpg" width="400px" /><br />
-		<p><span class="food-font">ジャパニーズレモネード<br />
+	<img src="image/foodmenu/alamas-19may_2.jpg" width="400px" /><br />
+		<p><span class="food-font">超ド豪快シャンディガフ<br />
 			&yen;800</span><br />
-			ワインとレモネードはアメリカンレモネード。柚子を入れたらあら不思議!! 一気に和のテイストに! 是非お試しあれ!
+			甘口ジンジャーエールにコロナをぶっ刺しました! この見た目はまさにインスタ映え!! 是非お楽しみください!
 		</p>
 </div>
 
@@ -491,25 +491,25 @@ $(function(){
 
 &nbsp;
 
-<h2 id="aiso">AiSOTOPE LOUNGE</h2>
+<h2 id="aiso" name="aiso">AiSOTOPE LOUNGE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 </div>
 	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_mainmenu-19february.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_mainmenu-19may.jpg" width="400px" /><br />
 		<p><span class="food-font">MAIN BAR一押し<br />
-			『チョコカルミル』&nbsp;&yen;1000</span><br />
-			チョコレートリキュールとカルピスをミルクで仕上げたカクテルにストロベリーリキュールも加え、甘酸っぱくてクリーミーなカクテルを召し上がれ!!
+			『選べる!! カルピスサワー』&nbsp;&yen;700</span><br />
+			定番のカルピスサワーに「ピーチ」「レモン」「グレープ」の選べるフレーバーが期間限定で登場!! カラダにピースを合言葉に乾杯しちゃお☆
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_submenu-19february.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_submenu-19may.jpg" width="400px" /><br />
 		<p><span class="food-font">LOUNGE BAR一押し<br />
-						『BIG BOMB』&nbsp;&yen;1000</span><br />
-			日本初! AGWAのビッグボムグラスが登場!! 中身は甘くてサッパリ美味しいカクテル!『@agwa_japan 』を添えてインスタ映え～!
+						『R-1』3ショット &nbsp;&yen;1000</span><br />
+			さよなら平成! ようこそ令和! お腹に優しい乳酸菌ショットはみんなで乾杯できるお得な３杯セット♡
 		</p>
 </div>
 <div class="clear"></div>
@@ -558,7 +558,7 @@ $(function(){
 
 &nbsp;
 
-<h2 id="aiiro">AiiRO CAFE</h2>
+<h2 id="#aiiro" name="#aiiro">AiiRO CAFE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 <i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
@@ -566,9 +566,9 @@ $(function(){
 <p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
 
 <div id="menu-6">
-	<img src="image/foodmenu/aiiro-19february.jpg" width="400px" /><br />
-		<p><span class="food-font">『Strawberry by BOTTEGA』&nbsp;&yen;900</span><br />
-			イタリアのシリアルナンバー入りボトルのドライジンが入荷です!  フレッシュなストロベリーを使いボッテガジンにふさわしい味に仕上げました。甘～い夜ばかりじゃ退屈! たまにはスパイシーな夜もね♥
+	<img src="image/foodmenu/aiiro-19may.jpg" width="400px" /><br />
+		<p><span class="food-font">『Cherry Boy』&nbsp;&yen;1100</span><br />
+			AiiRO今月のオリジナルカクテルは、アメリカンチェリーを使ったBIGグラスカクテルです。チェリーブランデーをシェイクし、ちょっぴりビターな大人の味に仕上げました。大きいのが大好きなアナタに…♡
 					</p>
 </div>
 
