--- a/shop.html
+++ b/shop.html
@@ -68,7 +68,7 @@
 <table summary="店舗情報">
 <tbody>
 <tr>
-<td rowspan="4" class="cpn">株式会社カペラシスティーナ</td>
+<td rowspan="5" class="cpn">株式会社カペラシスティーナ</td>
 </tr>
 <tr>
 <th>ALAMAS CAFE</th>
@@ -84,6 +84,11 @@ TEL：03-6380-1504</td>
 <th>AiiRO CAFE</th>
 <td>〒160-0022&nbsp;&nbsp;東京都新宿区新宿2-18-1 第7天香ビル1F<br />
 TEL：03-6273-0740</td>
+</tr>
+<tr>
+<th>AVANTGARDE TOKYO</th>
+<td>〒160-0022&nbsp;&nbsp;東京都新宿区新宿2-10-3 高橋ビル2F<br />
+TEL：03-6380-0024</td>
 </tr>
 </tbody>
 </table>
