--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@ $(function(){
 
 	var targetMonth = "";
 	var todayDate = new Date();
-	var changeDate = new Date(2019, 5-1, 1);
+	var changeDate = new Date(2019, 7-1, 1);
 
 	if( todayDate.getTime() > changeDate.getTime() ){
 		$("#this_month").hide();
@@ -117,14 +117,14 @@ $(function(){
 
 </div>
 
-<!----------------------------4/1 start---------------------------->
+<!----------------------------7/1 start---------------------------->
 <div id="this_month">
 
 <p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
 	中には他ではお目にかかれない変わりダネも有り! 新宿二丁目ならではの空気感と共にぜひご堪能あれ♪
 </p>
 
-<h2 id="alamas" name="alamas">ALAMAS CAFE</h2>
+<h2 id="alamas">ALAMAS CAFE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 <i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
@@ -133,18 +133,18 @@ $(function(){
 	</div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19april.jpg" width="400px" /><br />
-		<p><span class="food-font">春のアラマス パン祭り♪<br />
-			&yen;650〜</span><br />
-			色々な具材とナマスがポイントの、ベトナムサンドイッチ「バインミー」。自家製チャーシュー、鶏ハム+ふんわり玉子、週代わりの三種類が楽しめちゃう! 気軽にテイクアウトもオススメ!!
+	<img src="image/foodmenu/alamas-19july.jpg" width="400px" /><br />
+		<p><span class="food-font">シビ辛! 夏野菜のブタミナ丼<br />
+			&yen;750〜</span><br />
+			厚めに切った食べ応えのある豚肉と夏野菜を素揚げして、甜麺醤ソースで炒め合わせました。自家製ラー油をかけて実山椒を散らせば、甘くて辛くて痺れて白米を頬張りたくなること請け合いです☆
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19april_2.jpg" width="400px" /><br />
-		<p><span class="food-font">ベトナムコーヒー<br />
-			&yen;600</span><br />
-			今月のアラマスボールはバインミー。コンデンスミルクが入ったベトナムコーヒーと相性抜群! 是非バインミーと共にお楽しみください。
+	<img src="image/foodmenu/alamas-19july_2.jpg" width="400px" /><br />
+		<p><span class="food-font">壷漬けパインラム<br />
+			&yen;650</span><br />
+			夏本番! 甘い香りのラムにパイナップルをたっぷり漬け込みました! 香りと裏腹な刺激的な味をお楽しみください!
 		</p>
 </div>
 
@@ -258,18 +258,18 @@ $(function(){
 	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_mainmenu-19april.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_mainmenu-19july.jpg" width="400px" /><br />
 		<p><span class="food-font">MAIN BAR一押し<br />
-			『#平成最後のカクテル』&nbsp;&yen;900</span><br />
-			出会いと別れの季節の春… 平成最後のカクテルができました! メロンとグレープフルーツを使用した爽やかな味わいはまるで、新緑の中で深呼吸をしているようなすっきりとした味わい♡
+			『SUNSET』&nbsp;&yen;1000</span><br />
+			パッションフルーツのリキュールを使ってみんな大好きなモヒートに仕立てました♥ 夏にピッタリのカクテルを片手に音楽にノッて夏の思い出作っちゃお♥
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_submenu-19april.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_submenu-19july.jpg" width="400px" /><br />
 		<p><span class="food-font">LOUNGE BAR一押し<br />
-						『ピーチスカッシュ』&nbsp;&yen;600</span><br />
-			甘いピーチシロップに清涼感たっぷりのミントシロップをソーダで割った爽やかなノンアルコールカクテルです!! アクセントのミントの葉を噛めば息リフレーッシュ★
+						『BLUE OCEAN』&nbsp;&yen;700</span><br />
+			夏到来!! クラッシュアイスに涼やかなブルーキュラソーの青色とグレープフルーツとトニックウォーターの甘酸っぱい味わいが夏気分を更に盛り上げること間違いなし☆
 		</p>
 </div>
 <div class="clear"></div>
@@ -326,9 +326,9 @@ $(function(){
 <p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
 
 <div id="menu-6">
-	<img src="image/foodmenu/aiiro-19april.jpg" width="400px" /><br />
-		<p><span class="food-font">『Mary The Celery』&nbsp;&yen;1000</span><br />
-			牡蠣のエキスがたっぷり入ったトマトジュースを使い、コクのあるブラッディメアリーにしあげました☆ セロリを大胆に使い、味も見ためも映えちゃう系カクテル♡
+	<img src="image/foodmenu/aiiro-19july.jpg" width="400px" /><br />
+		<p><span class="food-font">『MALFY LEMON』&nbsp;&yen;1000</span><br />
+			今月のカクテルは、夏らしくジンベースのレモンカクテルです。5種類のボタニカルを使った深みのあるジンにフレッシュレモン! んま～なんて夏らしい★ バルーングラスでインスタばえはもちろん!是非お試しあれ♥
 					</p>
 </div>
 
@@ -357,14 +357,14 @@ $(function(){
 </div><!--this_month-->
 
 
-<!----------------------------5/1 start---------------------------->
+<!----------------------------8/1 start---------------------------->
 <div id="next_month">
 
 <p class="menu-txt">各店、グランドメニューの他、月替わりの期間限定ドリンクやフードをご提供☆<br />
 	中には他ではお目にかかれない変わりダネも有り! 新宿二丁目ならではの空気感と共にぜひご堪能あれ♪
 </p>
 
-<h2 id="alamas" name="alamas">ALAMAS CAFE</h2>
+<h2 id="alamas">ALAMAS CAFE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 <i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
@@ -373,18 +373,18 @@ $(function(){
 	</div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19may.jpg" width="400px" /><br />
-		<p><span class="food-font">インスタコライス<br />
+	<img src="image/foodmenu/alamas-19august.jpg" width="400px" /><br />
+		<p><span class="food-font">珍メニュー 夏のカフェうなメシ<br />
 			&yen;900〜</span><br />
-			カフェ飯で定番のタコライスをインスタ映えを狙った盛り付けにしてみました。食べ応えのある粗挽き肉のピリ辛ミートソースと焼いたフルーツの甘さがベストマッチ。最後にチーズソースをたっぷりかければ…ほら、インスタしたくなったでしょ?
+			蒸し暑い夜には鰻とアボカドで栄養補給を。たっぷりの薬味で香りと食感を楽しむちらし寿司風と、バターのコクとバルサミコ酢の酸味が効いたオープンオムレツ風。最後はスープをかけて召し上がれ。
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/alamas-19may_2.jpg" width="400px" /><br />
-		<p><span class="food-font">超ド豪快シャンディガフ<br />
-			&yen;800</span><br />
-			甘口ジンジャーエールにコロナをぶっ刺しました! この見た目はまさにインスタ映え!! 是非お楽しみください!
+	<img src="image/foodmenu/alamas-19august_2.jpg" width="400px" /><br />
+		<p><span class="food-font">フローズンコーヒー<br />
+			&yen;600</span><br />
+			暑いこの頃に冷たーいドリンクはいかがですか? ミルクとコーヒーで大人の甘味をお楽しみ下さい。ノンアルコールドリンクですがアルコールをオプションで追加可能!! リニューアルしたコーヒーも是非お試しください!
 		</p>
 </div>
 
@@ -491,25 +491,25 @@ $(function(){
 
 &nbsp;
 
-<h2 id="aiso" name="aiso">AiSOTOPE LOUNGE</h2>
+<h2 id="aiso">AiSOTOPE LOUNGE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 </div>
 	<p>メインとサブの２フロアに分かれており、平日は企画もののBAR営業を中心におこない、週末はクラブとして多種多様なイベントが開催され、多様な人達でにぎわう。昼間もオフ会や誕生日会、同性婚パーティーなどの会場と利用されている。</p>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_mainmenu-19may.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_mainmenu-19august.jpg" width="400px" /><br />
 		<p><span class="food-font">MAIN BAR一押し<br />
-			『選べる!! カルピスサワー』&nbsp;&yen;700</span><br />
-			定番のカルピスサワーに「ピーチ」「レモン」「グレープ」の選べるフレーバーが期間限定で登場!! カラダにピースを合言葉に乾杯しちゃお☆
+			『Sea side』&nbsp;&yen;1000</span><br />
+			コカハーバルリキュールのAGWAをベースに『海で出会った彼との恋』をイメージしたカクテルができました! さっぱりとした味わいのカクテルを飲んで、一夏の恋しませんか?
 		</p>
 </div>
 
 <div id="menu-2">
-	<img src="image/foodmenu/aiso_submenu-19may.jpg" width="400px" /><br />
+	<img src="image/foodmenu/aiso_submenu-19august.jpg" width="400px" /><br />
 		<p><span class="food-font">LOUNGE BAR一押し<br />
-						『R-1』3ショット &nbsp;&yen;1000</span><br />
-			さよなら平成! ようこそ令和! お腹に優しい乳酸菌ショットはみんなで乾杯できるお得な３杯セット♡
+						『塩キャラメルフロート』&nbsp;&yen;800</span><br />
+			塩キャラメルのウォッカをコーラで割って生クリームとキャラメルソースをたっぷりトッピング♥ 甘くてちょっぴり強いデザートカクテルです!! シナモンパウダーもお好みで♥
 		</p>
 </div>
 <div class="clear"></div>
@@ -558,7 +558,7 @@ $(function(){
 
 &nbsp;
 
-<h2 id="#aiiro" name="#aiiro">AiiRO CAFE</h2>
+<h2 id="aiiro">AiiRO CAFE</h2>
 <div id="pay_icon">
 <i class="fa fa-credit-card fa-fw" aria-hidden="true"></i> CREDIT OK!&nbsp;&nbsp;
 <i class="fa fa-money fa-fw" aria-hidden="true"></i> WEB MONEY OK!
@@ -566,9 +566,9 @@ $(function(){
 <p>仲通りに面した、カジュアルなオープンカフェ＆バー。常連客もビギナーの方もすぐに打ち解ける事が空間をご提供しており、外国人の方も多くご来店されています。</p>
 
 <div id="menu-6">
-	<img src="image/foodmenu/aiiro-19may.jpg" width="400px" /><br />
-		<p><span class="food-font">『Cherry Boy』&nbsp;&yen;1100</span><br />
-			AiiRO今月のオリジナルカクテルは、アメリカンチェリーを使ったBIGグラスカクテルです。チェリーブランデーをシェイクし、ちょっぴりビターな大人の味に仕上げました。大きいのが大好きなアナタに…♡
+	<img src="image/foodmenu/aiiro-19august.jpg" width="400px" /><br />
+		<p><span class="food-font">『Green Bamboo』&nbsp;&yen;1000</span><br />
+			夏といえばこれ!! 毎年大人気のAiiROオリジナルのきゅうりのカクテル! さっぱりとした後味、見た目も映え! たまには細いきゅうりも味わって♥
 					</p>
 </div>
 
